[package]
name = "engram-parser"
version = "0.1.0"
edition = "2024"
description = "Pure-Rust, zero-dependency GGUF deserializer and Mixture-of-Experts per-expert weight extractor. Returns raw byte buffers with shape metadata; performs no neural-network math."
license = "GPL-3.0-or-later"
repository = "https://github.com/Limen-Neural/engram-parser"
homepage = "https://github.com/Limen-Neural/engram-parser"
keywords = ["gguf", "moe", "parser", "weights", "deserializer"]
categories = ["parser-implementations", "science"]
readme = "README.md"

[dependencies]

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
